--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,9 @@
     <string name="delete">删除</string>
     <string name="nodata">空空如也</string>
     <string name="saveok">保存成功</string>
+    <string name="myinfor">我的快递信息</string>
+    <string name="nopic">没有此图片</string>
+    <string name="share">分享朋友圈</string>
+    <string name="sharefail">分享朋友圈失败</string>
+    <string name="copy">已复制到粘贴板</string>
 </resources>
